{Dev}[footer, contact](developpement catégories)

--- a/index.html
+++ b/index.html
@@ -111,10 +111,23 @@
             <div class="contact__formulaire__email">
               <input type="email" placeholder="Email" />
             </div>
-            <textarea></textarea>
+            <textarea>Votre message ...</textarea>
+            <button>Envoyer</button>
           </form>
         </div>
       </div>
     </div>
+    <footer>
+      <div class="footer">
+        <div class="footer">
+          <div class="footer__logo">
+            <img src="/img/logo--blanc.svg" alt="" />
+          </div>
+          <div class="footer__text">
+            <p>© 2020 by Jonathan Podvin</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
