{Dev}[footer, contact](developpement catégories)

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <header>
       <ul>
         <li id="home"><a href="index.html">Home</a></li>
-        <li id="experience"><a href="#formations">Formations</a></li>
-        <li id="competences"><a href="#competences">Compétences</a></li>
+        <li id="experience"><a href="#education">Formations</a></li>
+        <li id="competences"><a href="#skills">Compétences</a></li>
         <li id="contact"><a href="#contact">Contact</a></li>
       </ul>
     </header>
@@ -38,11 +38,21 @@
     </div>
     <!-- FORMATIONS -->
     <div class="title">
-      <h2 id="formation" class="title--formations">Formations</h2>
+      <h2 id="education" class="title--formations">Formations</h2>
+    </div>
+    <div class="container">
+      <div class="formations">
+        <div class="formations__formation formations__formation--right">
+          <span class="formations__formation__dot"></span>
+          <p>2017 - 2020</p>
+          <p>BAC</p>
+          <p>Lycée STI2D - Pont de Cheruy (38)</p>
+        </div>
+      </div>
     </div>
     <!-- COMPETENCES -->
     <div class="title">
-      <h2 id="competences" class="title--competences">Compétences</h2>
+      <h2 id="skills" class="title--competences">Compétences</h2>
     </div>
     <div class="competences">
       <div class="competences__competence">
