{Fix}[contact](fix id formulaire pour scroll)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li id="home"><a href="index.html">Home</a></li>
         <li id="experience"><a href="#education">Formations</a></li>
         <li id="competences"><a href="#skills">Compétences</a></li>
-        <li id="contact"><a href="#contact">Contact</a></li>
+        <li id="contact"><a href="#form">Contact</a></li>
       </ul>
     </header>
     <!-- LOGO -->
@@ -100,7 +100,7 @@
     </div>
     <!-- CONTACT -->
     <div class="title">
-      <h2 id="contact" class="title--contact">Contact</h2>
+      <h2 id="form" class="title--contact">Contact</h2>
     </div>
     <div class="contact--container">
       <div class="contact">
