--- a/index.html
+++ b/index.html
@@ -42,11 +42,36 @@
     </div>
     <div class="container">
       <div class="formations">
+        <!-- first formation -->
         <div class="formations__formation formations__formation--right">
-          <span class="formations__formation__dot"></span>
+          <span
+            class="formations__formation__dot formations__formation__dot--left"
+          ></span>
           <p>2017 - 2020</p>
-          <p>BAC</p>
+          <p>BAC STI2D</p>
           <p>Lycée STI2D - Pont de Cheruy (38)</p>
+        </div>
+        <!-- formation space-->
+        <div class="formations__formation formations__formation--space"></div>
+        <!-- second formation -->
+        <div class="formations__formation formations__formation--left">
+          <span
+            class="formations__formation__dot formations__formation__dot--right"
+          ></span>
+          <p>2013 - 2017</p>
+          <p>Brevet des collège</p>
+          <p>Collège Pierre Plante - Montallieu (38)</p>
+        </div>
+        <!-- space bottom -->
+        <div class="formations__formation formations__formation--space--bottom">
+          <span
+            class="formations__formation__dot formations__formation__dot--bottom"
+          ></span>
+        </div>
+        <!-- start date formations -->
+        <div class="formations__formation__date">
+          <p>2002</p>
+          <p>20 juin</p>
         </div>
       </div>
     </div>
