--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="title">
       <h2 id="form" class="title--contact">Contact</h2>
     </div>
-    <div class="contact--container">
+    <div class="container">
       <div class="contact">
         <div class="contact__informations">
           <p>Joris Podvin</p>
