--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -23,6 +27,8 @@
         <li id="contact"><a href="#form">Contact</a></li>
       </ul>
     </header>
+    <!-- BUTTON GO ON TOP -->
+    <div id="scrollToTop"></div>
     <!-- LOGO -->
     <div class="logo">
       <img src="/img/logo--noir.svg" alt="" />
@@ -164,5 +170,8 @@
         </div>
       </div>
     </footer>
+
+    <!-- JAVASCRIPT -->
+    <script src="js/main.js"></script>
   </body>
 </html>
