fix jquery et font awesome cdn

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       rel="stylesheet"
     />
     <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -28,7 +28,7 @@
       </ul>
     </header>
     <!-- BUTTON GO ON TOP -->
-    <div id="scrollToTop"></div>
+    <div id="scrollToTop"><i class="fas fa-arrow-up"></i></div>
     <!-- LOGO -->
     <div class="logo">
       <img src="/img/logo--noir.svg" alt="" />
@@ -172,6 +172,8 @@
     </footer>
 
     <!-- JAVASCRIPT -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
